<resources>
    <string name="app_name" translatable="false">Singaroute</string>
    <string name="singapur_title" translatable="false">Singapur</string>
    <string name="singapur_location">Mariana Gardens Dr, Singapur.</string>
    <string name="singapur_location_icon">Icono de localizacion</string>
    <string name="singapur_description" translatable="false">Es un país soberano insular de Asia, formado por sesenta y tres islas, cuya forma de gobierno es la república parlamentaria.Su territorio se divide en cinco consejos de desarrollo comunitario. Singapur es una ciudad-Estado, por lo que su capital se considera la ciudad de Singapur. Está situado al sur del estado de Johor (península de Malasia) y al norte de las islas Riau (Indonesia), separado de estas por el estrecho de Singapur. Con 730 km², es el país más pequeño del Sudeste Asiático. Su territorio ha crecido constantemente con tierras ganadas al mar.</string>
    <string name="jardines_junto_al_lago" translatable="false">Jardínes junto al lago</string>
    <string name="jardines_junto_al_lago_desc" translatable="false"><p>En el sur del país se encuentra un increíble parque tropical "Gardens by the Bay".</p> <br /> <p> Las estructuras arbóreas del Jardín se construyeron especialmente aquí para diversos fines: en algunas, por ejemplo, especies raras de enredaderas, mientras que otras se utilizan para recoger agua de lluvia.</p> <br /> <p> Entre los árboles hay pasajes con una vista magnífica. En "Gardens by the Bay" también hay dos invernaderos: "Flower Dome" y "Cloud Forest". </p></string>
    <string name="imagen_de_los_jardines" translatable="false">Imagen de los jardines</string>
    <string name="temperature" translatable="false">25ºC</string>
    <string name="templo_museo_buda">Templo y Museo de la Reliquia del Diente de Buda.</string>
    <string name="descripcion">El Templo de la Reliquia del Diente de Buda se inauguró el 30 de mayo del año 2007, y su construcción se diseñó para que se pudiera seguir las normas y preceptos de templos tradicionales de China los cuales son de estilo Tang. Un edificio de 5 plantas donde incluye un gran museo y hasta un jardín zen el cual se encuentra en la azotea de este bonito templo de Singapur.</string>
    <string name="imagen_descripcion">Uno de los lugares más impresionantes de Singapur, el Templo de la Reliquia del Diente de Buda</string>
    <string name="direccion">South Bridge Road.</string>
    <string name="horario">de 07:00 a 19:00 todos los días</string>
    <string name="recomendacion">Recomendación:</string>
    <string name="recomendacion_vestir">Como un buen templo budista toda persona que quiera entrar deberá tener los hombros y rodillas cubiertos.</string>
    <string name="sitios_cercanos">Sitios Cercanos:</string>
    <string name="otros_sitios">China Town, Templo Sri Mariamman, Mezquita Jamae.</string>
    <string name="imagen_de_Merlion" translatable="false">Imagen de Merlion</string>
    <string name="Merlion_title" translatable="false">Merlion Park</string>
    <string name="merlion_desc" translatable="false">El cuerpo del Merlion simboliza los humildes comienzos de Singapur como pueblo de pescadores. Su cabeza representa el nombre original de Singapur, Singapura, o ciudad del león en malayo. Hoy, puedes vislumbrar esta leyenda en Merlion Park</string>
    <string name="merlion_location">Merlion Park, Singapur, Singapur.</string>
    <string name="cloud_image">cloud image</string>
</resources>